# gg-vp-data-exercice

./: .gitignore  .sqlfluff  CHANGELOG.md  README.md  dbt_project.yml  pyproject.toml
.github/workflows/: ci_cd.yml
analyses/: dedup_metrics.sql  gps_correction_impact.sql  query_results.sql
docs/: ADR-001-scd-type-2.md  ADR-002-matching-strategy.md  ADR-003-deduplication-fuzzy-matching.md  ADR-004-gps-validation-correction.md  FAQ.md  GITHUB_SETUP_GUIDE.md  README.md  ROADMAP.md
flyway/manual/: V002__create_warehouses.sql  V004__grant_permissions.sql
flyway/sql/: V000__bootstrap_permissions.sql  V001__create_databases_schemas.sql  V003__create_roles.sql
macros/: drop_table.sql  extract_city_from_name.sql  generate_schema_name.sql  haversine_distance.sql  show_tables.sql  text_similarity.sql
models/: sources.yml
models/marts/: dim_magasin.sql  marts.yml
models/observability/: observability__anomalies.sql  observability__data_quality.sql  observability__freshness.sql
models/staging/: stg_gi_magasins.sql  stg_th_magasins.sql
seeds/: communes-france-2025.csv  communes-france-2025.csv.broken  communes-france-2025.yml
tests/: assert_all_sources_in_dim.sql  assert_scd2_no_overlapping_dates.sql  assert_scd2_one_current_per_store.sql
