[project]
name = "globe-vp-data-exercise"
version = "1.0.0"
description = "Pipeline VP Data complet : dbt + Flyway + RBAC + CI/CD + Observabilité"
requires-python = ">=3.10"

dependencies = [
    "dbt-snowflake>=1.10.3",
    "sqlfluff>=3.5.0",
    "sqlfluff-templater-dbt>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
